examples/napi/tests/build_error_tests/reference_family_share_with.stderr
error[E0133]: call to unsafe function `napi::bindgen_prelude::Reference::<T>::share_with` is unsafe and requires unsafe function or block
 --> tests/build_error_tests/reference_family_share_with.rs:4:3
  |
4 |   reference.share_with(env, |_| Ok(()))
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
  |
  = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function `SharedReference::<T, S>::share_with` is unsafe and requires unsafe function or block
  --> tests/build_error_tests/reference_family_share_with.rs:11:3
   |
11 |   reference.share_with(env, |_| Ok(()))
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
